# ChekProp

./: .gitignore  README.md  main.py  pyproject.toml
cache/llm_invocations/: 25ff85caef0d067b19048278f891d09b-0.json  260867007f215a1db2bd3a42278328fe-0.json  2c26d305fae3c656b21f931ae65810fa-0.json  4016eb9bc05aca053cdd8fc3f11f0d03-0.json  452eb194a58783b1a21bf041e6f7af0b-0.json  59dbc2b0925fd8340b5271bbc7e1af91-0.json  7a55e5109888d8dab01f241264c5daa3-0.json  afdab276b4ae5fe46ab1ff508ddf64ba-0.json
examples/: test_it.py
examples/gpiozero/apps/app_1/generated_tests/: test_LaserTripwire_properties_0.py  test_LaserTripwire_properties_0_result.txt  test_LaserTripwire_properties_1_result.txt  test_LaserTripwire_properties_2.py  test_LaserTripwire_properties_2_result.txt  test_LaserTripwire_properties_fixed.py
examples/gpiozero/apps/app_1/src/: laser_tripwire.py
examples/gpiozero/apps/app_1/test/: test_laser_tripwire.py  test_laser_tripwire_units.py
examples/gpiozero/apps/app_2/generated_tests/: test_LineFollowingRobot_properties_0.py  test_LineFollowingRobot_properties_0_result.txt  test_LineFollowingRobot_properties_fixed.py
examples/gpiozero/apps/app_3/: test_UltrasonicTheremin_properties_fixed.py
examples/gpiozero/apps/tcs/: temperature_control_system.rebeca
examples/gpiozero_1/test/: test_laser_tripwire.py
prompt_templates/: LIB_SIMPLE.txt  SIMPLE.txt
src/: config.py
src/llm/: gemini.py  invocation.py  llm_adapter.py  minmax.py  qwen.py
src/tgen/: prompt_generator.py  test_generator.py  test_runner.py
tests/: tmp_tests.py
(+31 files in other folders)
