[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "khaes-kth",email = "khaes@kth.se"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gpiozero (>=2.0.1,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "hypothesis (>=6.124.7,<7.0.0)",
    "rpi-gpio (>=0.7.1,<0.8.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.61.1,<2.0.0)",
    "pytest-json-report (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
